k8s/base/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.ukkiee.dev`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik-system
        - name: gzip
          namespace: traefik-system
      services:
        - name: grafana
          port: 3000
  tls:
    certResolver: cloudflare
